# advent-c

./: CMakeLists.txt  advent-c.cbp  copying.c  main.c  printer.c  tester.txt  tripref.c
src/: advent.c  day01.c  day1.c  day2.c
